2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>

	Fixes #336286

	* capplet-util.c (capplet_init): switched from popt to GOptionContext.

2007-01-05  Christian Persch <chpe@gnome.org>

	Fixes #393117

	* gnome-theme-info.c (read_icon_theme): fixed leak.

2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* file-transfer-dialog.c: (file_transfer_dialog_init):
	Pass NULL to gtk_label_new() to do a bit less work.
	Bug #376949.	

2006-11-01  Thomas Wood  <thos@gnome.org>

	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files),
	(file_transfer_dialog_set_prop), (file_transfer_dialog_class_init),
	(file_transfer_dialog_init),
	(file_transfer_dialog_new_with_parent),
	(file_transfer_dialog_update_cb):
	* file-transfer-dialog.h:

	Clean up file transfer dialog. Closes bug 319926 (Wrong path displayed
	on icon theme installation).

2006-09-30  Thomas Wood  <thos@gnome.org>

	* theme-thumbnail.c: (create_image): Set the gtk icon theme setting.
	Fixes bug 355268 - "Open" icon on button preview not working

2006-08-17  Thomas Wood  <thos@gnome.org>

	* capplets/common/theme-thumbnail.c: (fake_expose_widget),
	(hbox_foreach), (create_image): Modified patch from bug 351378.
	Fixes bug 351378 and bug 171634.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gconf-property-editor.c: (peditor_color_value_changed),
	(peditor_color_widget_changed), (gconf_peditor_new_color):
	patch by Kevin Bauder <kevin.bauder@gmail.com>,
	"Replaced deprecated GnomeColorPicker with GtkColorButton."
	(Closes: #171680)

2006-07-05  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am, added DBUS_LIBS, closing #346442

2006-06-23  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am, activate-settings-daemon.c: g-s-d activation is based
	on DBUS now.

2006-03-29  Arjan Timmerman <arjani@soulfly.nl>

	Fixes #334153

	* activate-settings-daemon.c (activate_settings_daemon): fixed leaked
	CORBA_environment and removed extra if statement.

2006-03-23  Rodrigo Moya <rodrigo@novell.com>
