@@ -1,3 +1,9 @@
+2007-01-11  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-info.c: (update_common_theme_dir_index): Applied patch
+	from Priit Laes <amd@store20.com>. Fixes bug 349471 (Crash on manually
+	changing the icon theme name).
+
 2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
 
 	Fixes #336286
